# research_mads_multi_agents

./: .gitignore  README.md  main.py  pyproject.toml
test_project/: README (Run 2).md  README.md  calculator.py  main.py  utils.py
zyklen_archiv/: zyklus1.py  zyklus2.py
